# Yolov8-OpenVINO

./: .gitignore  CMakeLists.txt  inferenceopv.cpp  inferenceopv.h  main.cpp
